--- a/src/app/_exchange/step6-2/step6-2.component.html
+++ b/src/app/_exchange/step6-2/step6-2.component.html
@@ -1,4 +1,4 @@
-<div class="step">
+<div class="step" [ngClass]="{'custom-loader disabled': loading}">
   <div class="step-title"><h3 class="h3">5. {{ 'process5.title-crypto' | translate }}</h3></div>
 
   <p class="p_small pre-line" [innerHTML]="'process5.sub-title' | translate">
@@ -10,15 +10,9 @@
     <div class="select-amount">
       <label class="input-exchange">
         <div class="input">
-          <input type="text" value="0.000178">
+          <input type="text" [attr.value]="inputFrom" readonly>
           <span class="currency">BTC</span>
         </div>
-
-        <span class="error-label">Zadaná částka přesahuje limit 9,999 USD</span>
-        <!-- <span class="error-label">
-                                            Zadaná částka přesahuje limit 9,999 USD
-                                            <a href="#"> kontact us</a>
-                                        </span> -->
       </label>
     </div>
 
@@ -35,19 +29,20 @@
 
     <div class="item">
       <div class="qr-code">
-        <img src="../../assets/img/qr-code.png" alt="">
+        <!--<img src="../../assets/img/qr-code.png" alt="">-->
+        <img src="http://qrcode.tec-it.com/API/QRCode?data='{{dataCoinInput.params[3].value}}'&backcolor=%23ffffff" />
       </div>
     </div>
 
     <div class="item">
       <span>{{ 'process5.wallet-address' | translate }}</span>
-      <span><b>1GoBTCTiC8TEVoLmrGk4CQFXiVbRr7ktoz</b></span>
+      <span><b>{{dataCoinInput.params[3].value}}</b></span>
     </div>
 
-    <div class="item">
-      <span>{{ 'process5.time-to-pay-left' | translate }}</span>
-      <b>7 minut a 69 vteřin</b>
-    </div>
+    <!--<div class="item">-->
+      <!--<span>{{ 'process5.time-to-pay-left' | translate }}</span>-->
+      <!--<b>7 minut a 69 vteřin</b>-->
+    <!--</div>-->
   </div>
 
 
@@ -56,5 +51,5 @@
 
   </p>
 
-  <a href="#" class="btn btn-accent rippler rippler-default full-width">Money sent</a>
+  <a href="#" class="btn btn-accent rippler rippler-default full-width" (click)="goFinish($event)">Money sent</a>
 </div>
