--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -287,7 +287,7 @@
 
                   <!-- STEP 4-2 -->
                   <div class="step4-2" *ngIf="stepsArray[11].status">
-                    <app-step4-2 (goNext)="goToForm5Czk($event)"
+                    <app-step4-2 (goNext)="checkRegistrStep($event)"
                                  (goBack)="goToStart()"></app-step4-2>
                   </div>
 
@@ -306,6 +306,7 @@
                                [BankEur]="dataBankEur"
                                [BankCzk]="dataBankCzk"
                                (goBack)="goToForm4()"
+                               (goPayBTC)="goToForm6_2($event)"
                                (goForm4_1)="goToForm4_1()"
                                (goForm4_2)="goToForm4_2()"
                                (goStart)="goToStart()" ></app-step5>
@@ -330,7 +331,9 @@
 
                   <!-- STEP 6-2 -->
                   <div class="step6-2" *ngIf="stepsArray[16].status">
-                    <app-step6-2></app-step6-2>
+                    <app-step6-2 [inputFrom]="inputExchangeFrom"
+                                 [selectedFrom]="selectedExchangeFrom"
+                                 [dataCoinInput]="dataCoin"></app-step6-2>
                   </div>
 
                   <div class="steps-footer">
