--- a/src/styles.sass
+++ b/src/styles.sass
@@ -6,6 +6,10 @@
 .header:after
   background-color: #1B2C58
 
+.steps .qr-code img
+  max-width: 185px
+  max-height: 185px
+
 .discount-program
   padding: 50px 0
   .stairs
