--- a/src/app/_header/header/header.component.html
+++ b/src/app/_header/header/header.component.html
@@ -16,7 +16,7 @@
               <li><a routerLink="/more/faq">{{ 'header.faq' | translate }}</a></li>
               <li><a routerLink="/more/news">{{ 'header.news' | translate }}</a></li>
               <li><a routerLink="/more/prepaid-card">{{ 'header.prepaid-card' | translate }}</a></li>
-              <li><a routerLink="/more/partners">{{ 'header.partners' | translate }}</a></li>
+              <!--<li><a routerLink="/more/partners">{{ 'header.partners' | translate }}</a></li>-->
               <li *ngIf="lastTransaction !== ''"><a routerLink="/more/payment">{{ 'header.transactions' | translate }}</a></li>
               <li><a routerLink="/more/landingmagazine">{{ 'header.landingmagazine' | translate }}</a></li>
               <li><a routerLink="/more/discount">{{ 'header.discount' | translate }}</a></li>
