--- a/src/app/table-history/table-history.component.html
+++ b/src/app/table-history/table-history.component.html
@@ -27,7 +27,7 @@
               <table>
                 <thead>
                 <tr>
-                  <th align="center">{{ 'table.HistoryReviews.col1' | translate }}:</th>
+                  <!--<th align="center">{{ 'table.HistoryReviews.col1' | translate }}:</th>-->
                   <th>{{ 'table.HistoryReviews.col2' | translate }}:</th>
                   <th>{{ 'table.HistoryReviews.col3' | translate }}:</th>
                   <th>{{ 'table.HistoryReviews.col4' | translate }}:</th>
@@ -39,7 +39,7 @@
                 <tbody>
                     <tr class="tr-default" *ngFor="let transactionItem of pagedItems; let i = index">
 
-                      <td align="center" class="transfer-name">{{transactionItem.id}}</td>
+                      <!--<td align="center" class="transfer-name">{{transactionItem.id}}</td>-->
 
                       <td>
                         <div class="currency">
