--- a/src/app/contacts/contacts.component.sass
+++ b/src/app/contacts/contacts.component.sass
@@ -196,5 +196,6 @@
     transform: scale(0.5)
 @media only screen and (max-width : 374px)
   .iframe
-    margin-top: -21rem
+    bottom: -15rem
+    margin-top: -24rem
     transform: scale(0.4)
