--- a/src/assets/sass/_media.sass
+++ b/src/assets/sass/_media.sass
@@ -38,7 +38,7 @@
 		margin-right: 3rem
 	.header-btn
 		margin-left: 3rem
-	.magazine .item-image img
+	.magazine .item-image .img
 		max-width: 100%
 	.header-menu .nav-menu>li
 		margin-right: 4rem
@@ -308,7 +308,7 @@
 		margin-bottom: 2rem
 	.magazine .item .h2 br
 			display: none
-	.magazine .item-image img, .magazine .item_reverse .item-image img
+	.magazine .item-image .img, .magazine .item_reverse .item-image .img
 		position: relative
 		max-width: 100%
 		left: auto
