--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -668,7 +668,7 @@ hr
 		&-image
 			position: relative
 			flex: 2
-			img
+			.img
 				position: absolute
 				max-width: none
 				left: 4.5rem
@@ -685,7 +685,7 @@ hr
 				order: 2
 				width: calc(100% - 31.4rem)
 				flex: none
-				img
+				.img
 					left: auto
 					right: 4.5rem
 
