--- a/src/app/landing-magazine/landing-magazine.component.html
+++ b/src/app/landing-magazine/landing-magazine.component.html
@@ -53,7 +53,7 @@
               </div>
 
               <div class="item-image">
-                <img src="../assets/img/magazine-image1.png" alt="">
+                <img src="../assets/img/magazine-image1.png" alt="" class="img">
               </div>
             </div>
 
@@ -72,7 +72,34 @@
               </div>
 
               <div class="item-image">
-                <img src="../assets/img/magazine-image3.png" alt="">
+                <div class="iframe">
+                  <div class="site">
+                    <div class="site-header">
+                      <a href="#" class="logo">
+                        <img src="../../assets/img/iframe/logo.svg" alt="">
+                        <span>Unicash</span>
+                      </a>
+                      <div class="slogan">
+                        <h1 class="slogan-title">Thousands of Customers use Unicash</h1>
+                        <h2 class="slogan-subtitle">Verified partner of safe and stable exchange platform network</h2>
+                      </div>
+                    </div>
+
+                    <div class="site-content">
+                      <ul>
+                        <li>Security</li>
+                        <li>Fast</li>
+                        <li>Stability</li>
+                      </ul>
+                      <div class="hexagon"><img src="../../assets/img/iframe/hexagon.svg" alt=""></div>
+                    </div>
+                    <div class="site-footer">
+                      <p>Unicash partner code: <b>UxC479</b></p>
+                    </div>
+
+                  </div>
+                </div>
+
               </div>
             </div>
 
@@ -91,7 +118,7 @@
               </div>
 
               <div class="item-image">
-                <img src="../assets/img/magazine-image2.png" alt="">
+                <img src="../assets/img/magazine-image2.png" alt="" class="img">
               </div>
             </div>
           </div>
